services/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: familiar-faces
  annotations:
    kubernetes.io/ingress.class: traefik
    # For WebSocket (chat-service)
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.nikitanfriends.fun
  rules:
  - host: api.nikitanfriends.fun 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
